Feat: (ICV5-3674)  Zip file of all Tenant Billing Reports (#162)
* feat: stage record for billing reports zip

* feat: add process enum

---------

Co-authored-by: Luis Sandoval <lsandoval@multiplied.com>